--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -3,7 +3,7 @@ services:
     build:
       context: ./build/
       dockerfile: Dockerfile  # Ensure this matches the actual file name
-    image: 4ss078/repocreate:latest
+    image: 4ss078/repocreate:local
     environment:
       - CRON=0 22 * * *  # No quotes needed unless the value contains special characters
     restart: unless-stopped
